--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,18 +1,14 @@
 ---
 title: Introduction
-description: "Welcome to the home of your new documentation"
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.svg"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.svg"
-  alt="Hero Dark"
-/>
+Cerevox is a [fully managed](https://en.wikipedia.org/wiki/Managed_services), [end-to-end encrypted](https://en.wikipedia.org/wiki/End-to-end_encryption) data normalization platform that enables teams to build scalable AI/ML powered features and applications. Bring your unstructured data from any source and normalize it to your desired structure for use with every major AI/ML framework.
+
+Cerevox allows you to easily:
+- Ingest millions of documents at scale
+- Normalize any file type to our opinionated structured JSON with text
+- Apply your desired structure to our opinionated output
+- Normalize your data in real-time to build AI-powered features and applications  at enterprise scale
 
 ## Setting up
 
