--- a/usecases/settings.mdx
+++ b/usecases/settings.mdx
@@ -1,7 +1,8 @@
 ---
-title: 'Global Settings'
+title: 'Retrieval Augmented Generation'
 description: 'Mintlify gives you complete control over the look and feel of your documentation using the mint.json file'
 icon: 'gear'
+sidebarTitle: 'RAG'
 ---
 
 Every Mintlify site needs a `mint.json` file with the core configuration settings. Learn more about the [properties](#properties) below.
