--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,7 +1,6 @@
 ---
 title: Introduction
 ---
-
 Cerevox is a [fully managed](https://en.wikipedia.org/wiki/Managed_services), [end-to-end encrypted](https://en.wikipedia.org/wiki/End-to-end_encryption) data normalization platform that enables teams to build scalable AI/ML powered features and applications. Bring your unstructured data from any source and normalize it to your desired structure for use with every major AI/ML framework.
 
 Cerevox allows you to easily:
@@ -10,58 +9,51 @@ Cerevox allows you to easily:
 - Apply your desired structure to our opinionated output
 - Normalize your data in real-time to build AI-powered features and applications  at enterprise scale
 
-## Setting up
+## Product
 
-The first step to world-class documentation is setting up your editing environnments.
+**Hosted API**  
+Access our powerful AI capabilities via our hosted API, making it easy to integrate our services into your applications.
 
-<CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
-  </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
+**Python Library**  
+Leverage our Python library to seamlessly incorporate our AI tools and features into your Python-based projects and workflows.
+<sup>Coming Soon!</sup>
 
-## Make it yours
+**Node.js Library**  
+Integrate our AI functionalities effortlessly into your Node.js applications using our dedicated Node.js library.
+<sup>Coming Soon!</sup>
 
-Update your docs to your brand and add valuable content for the best user conversion.
+**CLI (Command Line Interface)**  
+Take control of our AI services directly from the command line with our user-friendly CLI, simplifying your development and management tasks.
+<sup>Coming Soon!</sup>
 
-<CardGroup cols={2}>
-  <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
-  >
-    Customize your docs to your company's colors and brands
-  </Card>
-  <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
-  >
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/components/accordion"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/showcase"
-  >
-    Check out our showcase of our favorite documentation
-  </Card>
-</CardGroup>
+## Key Features
+
+**Fully Managed**
+Unburden your team with our fully managed solution, allowing you to focus on innovation while we handle the infrastructure and compliance.
+
+**Custom Parsing**
+Tailor your data processing with precision using our custom parsing capabilities, ensuring your workflows fit your unique needs.
+
+**Scalability**
+Seamlessly scale your AI workflows to handle any workload, from small tasks to massive data processing, with Cerevox's scalable architecture.
+
+**File Support**
+Harness the power of various data formats with comprehensive file support, enabling you to process data in the way that suits your projects best.
+
+**Integrations**
+Integrate effortlessly with your existing tools and frameworks, streamlining your AI development and deployment processes with Cerevox's versatile integrations.
+
+
+## Use Cases
+
+**Execution of AI Models using context**
+Unlock the power of AI models with contextual execution, enabling intelligent decision-making and problem-solving.
+
+**Training Models**
+Train AI models to perfection with our robust tools and resources, ensuring your models perform at their best.
+
+**Fine-tuning Models**
+Refine AI models to meet your specific requirements and achieve exceptional results in your applications.
+
+**Retrieval Augmented Generation**
+Enhance content generation with retrieval-based AI, producing more relevant and valuable outputs.
