--- a/usecases/images.mdx
+++ b/usecases/images.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Images and Embeds'
+title: 'Fine-tuning Models'
 description: 'Add image, video, and other HTML elements'
 icon: 'image'
 ---
