--- a/usecases/markdown.mdx
+++ b/usecases/markdown.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Markdown Syntax'
+title: 'Execution of AI Models'
 description: 'Text, title, and styling in standard markdown'
 icon: 'text-size'
 ---
