--- a/introduction.mdx
+++ b/introduction.mdx
@@ -11,8 +11,8 @@ Cerevox allows you to easily:
 
 ## Product
 
-**Hosted API**  
-Access our powerful AI capabilities via our hosted API, making it easy to integrate our services into your applications.
+**API**  
+Access our powerful data normalization platform via our managed API, making it easy to integrate our services into your applications.
 
 **Python Library**  
 Leverage our Python library to seamlessly incorporate our AI tools and features into your Python-based projects and workflows.
