--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,86 +1,45 @@
 ---
 title: 'Quickstart'
-description: 'Start building awesome documentation in under 5 minutes'
+description: 'Start normalizing your data in under 2 minutes'
 ---
 
-## Setup your development
+## Account Creation
 
-Learn how to update your docs locally and and deploy them to the public.
+<Steps>
+  <Step title="Sign Up for a User account">
+    Register and create your personal user account with [Cerevox](https://cerevox.ai/app)
+  </Step>
+  <Step title="Create a Cerevox Account">
+    Establish a Cerevox Account to access our platform's full range data normalization features.
+  </Step>
+  <Step title="Provision Keys">
+    Generate a secure API key for your Cerevox Account to start normalizing your data. Remove keys that have been compromised.
+  </Step>
+</Steps>
 
-### Edit and preview
+### Data Normalization
 
 <AccordionGroup>
-  <Accordion icon="github" title="Clone your docs locally">
-    During the onboarding process, we created a repository on your Github with
-    your docs content. You can find this repository on our
-    [dashboard](https://dashboard.mintlify.com). To clone the repository
-    locally, follow these
-    [instructions](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository)
-    in your terminal.
+  <Accordion icon="quinscape" title="API">
+    Normalize documents through data.cerevox.ai
+    
+    ```bash API Call Example
+    curl -X 'POST' \
+    'https://www.data.cerevox.ai/v0/elements' -k \
+    -H 'accept: application/json' \
+    -H 'Content-Type: multipart/form-data' \
+    -H 'cerevox-api-key: <YOUR-KEY>' \
+    -F 'files=@sample.pdf'
+    ```
   </Accordion>
-  <Accordion icon="rectangle-terminal" title="Preview changes">
-    Previewing helps you make sure your changes look as intended. We built a
-    command line interface to render these changes locally. 1. Install the
-    [Mintlify CLI](https://www.npmjs.com/package/mintlify) to preview the
-    documentation changes locally with this command: ``` npm i -g mintlify ```
-    2. Run the following command at the root of your documentation (where
-    `mint.json` is): ``` mintlify dev ```
+  <Accordion icon="python" title="Python Library">
+    Coming Soon!
+  </Accordion>
+  <Accordion icon="node-js" title="Node.js Library">
+    Coming Soon!
+  </Accordion>
+  <Accordion icon="terminal" title="CLI">
+    Coming Soon!
   </Accordion>
 </AccordionGroup>
 
-### Deploy your changes
-
-<AccordionGroup>
-
-<Accordion icon="message-bot" title="Install our Github app">
-  Our Github app automatically deploys your changes to your docs site, so you
-  don't need to manage deployments yourself. You can find the link to install on
-  your [dashboard](https://dashboard.mintlify.com). Once the bot has been
-  successfully installed, there should be a check mark next to the commit hash
-  of the repo.
-</Accordion>
-<Accordion icon="rocket" title="Push your changes">
-  [Commit and push your changes to
-  Git](https://docs.github.com/en/get-started/using-git/pushing-commits-to-a-remote-repository#about-git-push)
-  for your changes to update in your docs site. If you push and don't see that
-  the Github app successfully deployed your changes, you can also manually
-  update your docs through our [dashboard](https://dashboard.mintlify.com).
-</Accordion>
-
-</AccordionGroup>
-
-## Update your docs
-
-Add content directly in your files with MDX syntax and React components. You can use any of our components, or even build your own.
-
-<CardGroup>
-
-<Card title="Style Your Docs" icon="paintbrush" href="/settings/global">
-  Add flair to your docs with personalized branding.
-</Card>
-
-<Card
-  title="Add API Endpoints"
-  icon="square-code"
-  href="/api-playground/configuration"
->
-  Implement your OpenAPI spec and enable API user interaction.
-</Card>
-
-<Card
-  title="Integrate Analytics"
-  icon="chart-mixed"
-  href="/analytics/supported-integrations"
->
-  Draw insights from user interactions with your documentation.
-</Card>
-
-<Card
-  title="Host on a Custom Domain"
-  icon="browser"
-  href="/settings/custom-domain/subdomain"
->
-  Keep your docs on your own website's subdomain.
-</Card>
-
-</CardGroup>
