--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -22,7 +22,7 @@ description: 'Start normalizing your data in under 2 minutes'
 <AccordionGroup>
   <Accordion icon="quinscape" title="API">
     Normalize documents through data.cerevox.ai
-    
+
     ```bash API Call Example
     curl -X 'POST' \
     'https://www.data.cerevox.ai/v0/elements' -k \
@@ -35,7 +35,7 @@ description: 'Start normalizing your data in under 2 minutes'
   <Accordion icon="python" title="Python Library">
     Coming Soon!
   </Accordion>
-  <Accordion icon="node-js" title="Node.js Library">
+  <Accordion icon="node-js" iconType="regular" color="#2ab573" title="Node.js Library">
     Coming Soon!
   </Accordion>
   <Accordion icon="terminal" title="CLI">
