--- a/company/about.mdx
+++ b/company/about.mdx
@@ -2,7 +2,7 @@
 title: 'About'
 ---
 
-At Cerevox, we've recognized a significant challenge faced by businesses today
+At Cerevox, we've recognized a significant data challenge faced by businesses today
 
 ## The State of Data
 
