update terms + privacy

--- a/legal/privacy.mdx
+++ b/legal/privacy.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Privacy Policy'
-description: 'Last updated: September 18, 2023'
+description: 'Last updated: December 26, 2024'
 sidebarTitle: 'Privacy'
 ---
 
@@ -25,7 +25,7 @@ For the purposes of this Privacy Policy:
 
 
 
-- __Company__ (referred to as either "the Company", "We", "Us" or "Our" in this Agreement) refers to GoLunos, 536 Middlebury Dr. Sunnyvale, CA 94087.
+- __Company__ (referred to as either "the Company", "We", "Us" or "Our" in this Agreement) refers to Cerevox, Inc., 536 Middlebury Dr. Sunnyvale, CA 94087.
 
 
 
@@ -259,4 +259,4 @@ You are advised to review this Privacy Policy periodically for any changes. Chan
 If you have any questions about this Privacy Policy, You can contact us:
 
 
-- By email: support@golunos.com
+- By email: support@cerevox.ai
