--- a/legal/terms.mdx
+++ b/legal/terms.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Terms and Conditions'
-description: 'Last updated: September 18, 2023'
+description: 'Last updated: December 26, 2024'
 sidebarTitle: 'Terms'
 ---
 
@@ -21,15 +21,11 @@ For the purposes of these Terms and Conditions:
 - __Affiliate__ means an entity that controls, is controlled by or is under common control with a party, where "control" means ownership of 50% or more of the shares, equity interest or other securities entitled to vote for election of directors or other managing authority.
 - __Account__ means a unique account created for You to access our Service or parts of our Service.
 - __Country__ refers to: California,  United States
-- __Company__ (referred to as either "the Company", "We", "Us" or "Our" in this Agreement) refers to GoLunos, 536 Middlebury Dr. Sunnyvale, CA 94087.
+- __Company__ (referred to as either "the Company", "We", "Us" or "Our" in this Agreement) refers to Cerevox, Inc., 536 Middlebury Dr. Sunnyvale, CA 94087.
 
 - __Device__ means any device that can access the Service such as a computer, a cellphone or a digital tablet.
 
 - __Free Trial__ refers to a limited period of time that may be free when purchasing a Subscription.
-
-
-
-
 
 - __Service__ refers to the Application or the Website or both.
 
@@ -224,4 +220,4 @@ By continuing to access or use Our Service after those revisions become effectiv
 If you have any questions about these Terms and Conditions, You can contact us:
 
 
-- By email: support@golunos.com
+- By email: support@cerevox.ai
