intro page updates

--- a/welcome/introduction.mdx
+++ b/welcome/introduction.mdx
@@ -1,59 +1,86 @@
 ---
 title: Introduction
 ---
-Cerevox is a [fully managed](https://en.wikipedia.org/wiki/Managed_services), [end-to-end encrypted](https://en.wikipedia.org/wiki/End-to-end_encryption) data normalization platform that enables teams to build scalable AI/ML powered features and applications. Bring your unstructured data from any source and normalize it to your desired structure for use with every major AI/ML framework.
+Cerevox is your research assistant, designed to help you find, verify, and trust answers across large datasets with diverse file types. Whether you're working with PDFs, spreadsheets, or legal documents, Cerevox ensures that every answer is backed by clear, reliable sources, allowing you to verify results quickly and confidently.
 
-Cerevox allows you to easily:
-- Ingest millions of documents at scale
-- Normalize any file type to our opinionated structured JSON with text
-- Apply your desired structure to our opinionated output
-- Normalize your data in real-time to build AI-powered features and applications  at enterprise scale
+With Cerevox, you can:
 
-## Product
+- Ingest and analyze large volumes of files efficiently
+- Query multiple datasets simultaneously with precision
+- Receive accurate answers with traceable source references
+- Trust your insights with verifiable data
 
-**API**  
-Access our powerful data normalization platform via our managed API, making it easy to integrate our services into your applications.
+Cerevox prioritizes transparency and reliability, equipping you with the tools to validate every result. Whether you're an analyst, researcher, or decision-maker, Cerevox serves as a dependable partner in your workflow, helping you focus on analysis rather than searching for answers.
 
-**Python Library**  
-Leverage our Python library to seamlessly incorporate our AI tools and features into your Python-based projects and workflows.
-<sup>Coming Soon!</sup>
 
-**Node.js Library**  
-Integrate our AI functionalities effortlessly into your Node.js applications using our dedicated Node.js library.
-<sup>Coming Soon!</sup>
+## Features
 
-**CLI (Command Line Interface)**  
-Take control of our AI services directly from the command line with our user-friendly CLI, simplifying your development and management tasks.
-<sup>Coming Soon!</sup>
+**Work Across Multiple File Types**  
+Analyze text-based formats including PDF, TXT, CSV, XLSX, DOCX, PPTX, Google Docs, Google Slides, Google Sheets, Parquet, and JSON.
 
-## Key Features
+**Handle Massive Datasets**  
+Efficiently process multiple files, multi-GB documents, and datasets scaling up to multiple TBs.
 
-**Fully Managed**  
-Unburden your team with our fully managed solution, allowing you to focus on innovation while we handle the infrastructure and compliance.
+**Perform Advanced Analysis**  
+Enable cross-document analysis and meta-analysis across folders and files.
 
-**Custom Parsing**  
-Tailor your data processing with precision using our custom parsing capabilities, ensuring your workflows fit your unique needs.
+**Integrate with Existing Tools**  
+Seamlessly connect with Google Drive today, with integrations for PowerBI, AWS S3, Microsoft SharePoint, Box, and Dropbox coming soon.
 
-**Scalability**  
-Seamlessly scale your AI workflows to handle any workload, from small tasks to massive data processing, with Cerevox's scalable architecture.
+**Trust Every Answer**  
+Every response includes precise citations, traceable back to the original dataset.
 
-**File Support**  
-Harness the power of various data formats with comprehensive file support, enabling you to process data in the way that suits your projects best.
+**Export Insights**  
+Export raw data today, with reporting and visualization tools coming soon.
 
-**Integrations**  
-Integrate effortlessly with your existing tools and frameworks, streamlining your AI development and deployment processes with Cerevox's versatile integrations.
+**Real-Time Collaboration**
+<sup>Coming Soon!</sup>  
+Team plans for coordinated dataset analysis and shared reporting.
+
+**Dynamic Updates**
+<sup>Coming Soon!</sup>  
+Real-time dataset updates for live querying.
 
 
 ## Use Cases
 
-**Execution of AI Models using context**  
-Unlock the power of AI models with contextual execution, enabling intelligent decision-making and problem-solving.
+**Financial Analysis**  
+Search across 10-K filings, annual reports, and financial statements to extract key insights from tables and text efficiently.
 
-**Training Models**  
-Train AI models to perfection with our robust tools and resources, ensuring your models perform at their best.
+**Legal Research**  
+Quickly analyze large sets of legal discovery documents, contracts, and case files while maintaining clear source citations.
 
-**Fine-tuning Models**  
-Refine AI models to meet your specific requirements and achieve exceptional results in your applications.
+**Market Research**  
+Aggregate and analyze trends across market reports, white papers, and data tables.
 
-**Retrieval Augmented Generation**  
-Enhance content generation with retrieval-based AI, producing more relevant and valuable outputs.
+**Data Science & AI Model Prep**  
+Extract structured insights from unstructured text and tables for dataset preparation.
+
+**Enterprise Knowledge Management**  
+Search and source answers from internal documents, manuals, and policy archives.
+
+## Collaboration
+
+Share conversations and findings seamlessly with team members.
+
+Team plans will enable shared data sources, report creation, and automated workflows.  
+<sup>Coming Soon!</sup>
+
+## Unique Value Proposition
+
+- Handle large datasets, diverse file types, and entire folders of documents efficiently.
+
+- Provide highly accurate citations and sourcing, ensuring every answer is easy to verify.
+
+- Deliver results faster by minimizing unnecessary pipeline delays.
+
+## What’s Next?
+
+- Integration with BI tools for dashboards.
+
+- Automated reporting workflows.
+
+- Real-time data monitoring and updates.
+
+Cerevox is built to save time, enhance productivity, and instill confidence in every answer.
+
