update before soft launch

--- a/company/about.mdx
+++ b/company/about.mdx
@@ -2,19 +2,27 @@
 title: 'About'
 ---
 
-At Cerevox, we've recognized a significant data challenge faced by businesses today
+At Cerevox, we've recognized a critical challenge in managing and extracting value from diverse datasets while maintaining trust and verifiability in the results.
 
 ## The State of Data
 
-A staggering 90% of all files produced to-date are unstructured. These unstructured files, which encompass a wide array of formats like PDFs, .txt files, word documents, audio files, and emails, present a formidable barrier. They cannot be readily processed by essential business development tools or harnessed by Large Language Models (LLMs). Both these tools demand structured JSON data to enable effective analysis. The conversion of messy, unstructured data into a format that aligns with these models poses substantial challenges, particularly for developers who lack specialized data engineering expertise. Furthermore, even after the data has been structured, ongoing data management and maintenance introduce complexities that can be overwhelming.
+Organizations today are inundated with data across multiple formats - PDFs, spreadsheets, text documents, presentations, and more. The challenge isn't just in accessing this information, but in efficiently analyzing it while maintaining clear traceability back to the source. Traditional tools often struggle with cross-document analysis, especially when dealing with large volumes of data across different file types. This complexity makes it difficult for analysts, researchers, and decision-makers to quickly find and verify the information they need.
 
 ## A World with Cerevox
 
-We're building a fully managed pipeline that simplifies the process for developers to ingest unstructured data and transform it into a format ready for utilization with Large Language Models (LLMs). Our innovative approach ensures that businesses can harness their unstructured data, irrespective of file type, document layout, or location. 
+We're building a comprehensive research assistant that transforms how you interact with your data. Cerevox enables you to efficiently analyze multiple datasets simultaneously, regardless of file type or size, while ensuring every answer is backed by clear, verifiable sources.
 
-But that's not all. We've gone a step further. Cerevox has developed a custom parser that empowers users to customize file transformations. With our user-friendly, no-code interface, customers can easily set their own parameters, resulting in precisely the output they desire, every time. 
+But that's not all. We've developed a powerful system that can handle massive datasets - from multi-GB documents to multiple TBs of data - while maintaining speed and accuracy. Our platform supports advanced cross-document analysis across various formats including PDF, TXT, CSV, XLSX, DOCX, PPTX, Google Workspace files, Parquet, and JSON.
 
-Our solution stands out because it's fully managed, eliminating the need for extensive data engineering expertise to initiate the processing of unstructured data. We're dedicated to simplifying the complexities of data transformation and management, allowing businesses to unlock the true potential of their unstructured data effortlessly.
+Our solution stands out because it's designed for both power and accessibility. Whether you're conducting financial analysis, legal research, market research, or managing enterprise knowledge, Cerevox provides the tools you need to find answers quickly and trust them completely. Every response includes precise citations, allowing you to trace information back to its original source effortlessly.
 
-Join us on this transformative journey at Cerevox, where we unleash data to action!
+Looking ahead, we're expanding our capabilities with upcoming features including:
+
+- Real-time collaboration for team analysis
+- Dynamic dataset updates for live querying
+- Integration with popular BI tools
+- Automated reporting workflows
+- Enhanced visualization capabilities
+
+Join us at Cerevox, where we're transforming how organizations find, verify, and trust their answers!
 
