--- a/company/faq.mdx
+++ b/company/faq.mdx
@@ -7,49 +7,68 @@ description: 'Frequently Asked Questions'
 
 <AccordionGroup>
   <Accordion title="What is Cerevox?">
-    Cerevox is an data normalization platform for AI developers and businesses. AI/ML technologies can only be properly leveraged with structured data. Cerevox normalizes any data to your desired structure so that it can be used with AI/ML models and frameworks. Cerevox provides hosted APIs, libraries, and a CLI to streamline data normalization for AI development.
+    Cerevox is a powerful research assistant designed to help you analyze and extract insights from large datasets across multiple file types. It enables you to efficiently search through your documents while providing verifiable, source-backed answers to your queries. Whether you're working with PDFs, spreadsheets, or legal documents, Cerevox ensures every response is accurate and traceable to its source.
   </Accordion>
-
   <Accordion title="How can Cerevox benefit my business?">
-    Cerevox simplifies AI development by offering managed solutions, enabling you to focus on innovation rather than infrastructure management. We enhance performance, scalability, and security of your infrastructure while reducing your operational overhead.
+    Cerevox streamlines your research and analysis workflows by enabling you to:
+    - Process and analyze large volumes of documents efficiently
+    - Work with multiple file types in a single platform
+    - Get answers with precise source citations
+    - Perform cross-document analysis
+    - Save time on data searching and verification
+    This allows your team to focus on analysis and decision-making rather than searching for information.
   </Accordion>
-
-  <Accordion title="What programming languages does Cerevox support?">
-    Cerevox supports Python and Node.js for easy integration into your projects. Our versatile CLI caters to developers across different technology stacks
+  <Accordion title="What file types does Cerevox support?">
+    Cerevox supports a wide range of text-based formats including:
+    - PDF, TXT, CSV
+    - DOCX, PPTX, XLSX
+    - Google Docs, Google Slides, Google Sheets
+    - Parquet and JSON files
+    We can efficiently process these files regardless of size, handling documents from a few KB to multiple TBs.
   </Accordion>
 </AccordionGroup>
 
 ## Use Cases
 
 <AccordionGroup>
-  <Accordion title="Can Cerevox help with AI model training?">
-    Yes, Cerevox provides tools and resources for AI model training. Our hosted API, Python Library, Node.js Library, and CLI prepare data for effective model training.
+  <Accordion title="How can Cerevox help with financial analysis?">
+    For financial analysis, Cerevox enables you to efficiently search and analyze 10-K filings, annual reports, and financial statements. You can extract key insights from both tables and text, with all information properly cited to its source. This makes it easier to compile financial data, track metrics across documents, and verify information for reporting.
   </Accordion>
-
-  <Accordion title="How does Cerevox support fine-tuning AI models?">
-    Cerevox offers fine-tuning capabilities through our hosted API and upcoming libraries. You can adjust AI models to meet specific requirements and optimize their performance.
+  <Accordion title="Can Cerevox assist with legal research?">
+    Yes, Cerevox is particularly valuable for legal research. It allows you to quickly analyze large sets of legal discovery documents, contracts, and case files while maintaining clear source citations. This ensures that every finding is traceable and verifiable, which is crucial for legal work. The platform's ability to search across multiple documents simultaneously significantly speeds up the research process.
   </Accordion>
-
-  <Accordion title="What is retrieval-augmented generation, and how can Cerevox help with it?">
-    Retrieval-augmented generation enhances content creation by incorporating relevant information. Cerevox is developing this feature within our hosted API, Python Library, Node.js Library, and CLI to elevate your content generation workflows.
+  <Accordion title="How does Cerevox support enterprise knowledge management?">
+    Cerevox helps organizations better manage their internal knowledge by enabling efficient search and sourcing of answers from internal documents, manuals, and policy archives. The platform's ability to handle diverse file types and provide accurate citations makes it easier to maintain and access institutional knowledge. This is particularly valuable for large organizations with extensive documentation spread across multiple formats and locations.
   </Accordion>
 </AccordionGroup>
 
 ## Getting Started
 
 <AccordionGroup>
-  <Accordion title="How do I sign up for Cerevox?">
-    To get started, visit our website and sign up for a user account. You can then create a Cerevox account and provision an API key for access.
+  <Accordion title="How do I get started with Cerevox?">
+    Getting started with Cerevox is simple:
+    1. Sign up for a user account at cerevox.ai/app
+    2. Connect your data by uploading documents or connecting a folder
+    3. Start asking questions about your data
+    4. Explore answers and verify sources through our intuitive interface
   </Accordion>
-
-  <Accordion title="Are there any tutorials or documentation available?">
-    Yes, we provide extensive documentation and tutorials to help you get started with Cerevox. Visit our website's resources section for more information.
+  <Accordion title="What kind of support is available?">
+    We provide comprehensive support to ensure your success with Cerevox:
+    - Email support for technical questions
+    - Regular platform updates and improvements
+    - Detailed documentation and tutorials (Coming Soon)
+    For enterprise customers, we offer additional support options to meet your specific needs.
   </Accordion>
-
-  <Accordion title="What kind of support does Cerevox offer for developers?">
-    Cerevox offers developer-friendly support through documentation, tutorials, and an upcoming CLI. Our team is also available to assist you with any technical questions or issues.
+  <Accordion title="How does data integration work?">
+    Cerevox currently integrates seamlessly with Google Drive, and we're expanding our integration capabilities. Coming soon are connections with:
+    - AWS S3
+    - Microsoft SharePoint
+    - Box
+    - Dropbox
+    - PowerBI
+    This allows you to easily access and analyze data from your existing storage solutions.
   </Accordion>
-  <Accordion title="Is Cerevox compliant with data security standards?">
-    Yes, Cerevox prioritizes data security and compliance. We offer features such as data obfuscation, access controls, and robust encryption to ensure your data is protected.
+  <Accordion title="Is my data secure with Cerevox?">
+    We prioritize the security and privacy of your data. All data processing is done within your secure environment, and we maintain strict data handling protocols. Our platform is designed to meet enterprise security requirements, ensuring your sensitive information remains protected while enabling powerful analysis capabilities.
   </Accordion>
 </AccordionGroup>
