add google data section to privacy

--- a/legal/privacy.mdx
+++ b/legal/privacy.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Privacy Policy'
-description: 'Last updated: December 26, 2024'
+description: 'Last updated: December 31, 2024'
 sidebarTitle: 'Privacy'
 ---
 
@@ -36,10 +36,7 @@ For the purposes of this Privacy Policy:
 - __Device__ means any device that can access the Service such as a computer, a cellphone or a digital tablet.
 
 
-
 - __Personal Data__ is any information that relates to an identified or identifiable individual.
-
-
 
 
 - __Service__ refers to the Application or the Website or both.
@@ -68,11 +65,8 @@ While using Our Service, We may ask You to provide Us with certain personally id
 
 - Email address
 - First name and last name
-
-
-
-
 - Usage Data
+- Uploaded Data
 
 
 
@@ -102,9 +96,52 @@ If You decide to register through or otherwise grant us access to a Third-Party 
 You may also have the option of sharing additional information with the Company through Your Third-Party Social Media Service's account. If You choose to provide such information and Personal Data, during registration or otherwise, You are giving the Company permission to use, share, and store it in a manner consistent with this Privacy Policy.
 
 
+## Google Drive Data Usage
 
+### Collection and Storage of Google Drive Data
 
+We allow users to upload and integrate data from their Google Drive accounts into our Service. When you choose to connect your Google Drive account to our Service, we collect and store data from the files you select to upload. This data is stored securely in our systems to enable our core Service functionality, specifically to allow you to query your data for accurate sources and answers.
 
+### Use of Google Drive Data
+
+Your Google Drive data is used exclusively to:
+
+- Provide you with query and search capabilities within your uploaded content
+- Generate accurate responses and sources based on your stored information
+- Maintain the functionality of our Service
+
+### Data Access and Security
+
+Access to your Google Drive data is strictly limited to authorized personnel who require access to maintain and improve the Service
+We implement appropriate technical and organizational measures to protect your data
+We do not share your Google Drive data with third parties unless required by law or with your explicit consent
+
+### User Control and Data Deletion
+
+You have complete control over your Google Drive data within our Service:
+
+- You can choose which files to upload and integrate
+- You can request the deletion of specific Google Drive data at any time
+- Upon account deletion, all associated Google Drive data is permanently removed from our systems
+- You can revoke our access to your Google Drive at any time through your Google Account settings
+
+### Data Retention
+
+We retain your Google Drive data only for as long as necessary to provide our Service or until:
+
+- You specifically request the deletion of the data
+- You delete your account with our Service
+- You revoke our access to your Google Drive
+
+### Employee Access
+
+Our employees may access your Google Drive data only when:
+
+- Specifically authorized for essential Service maintenance
+- Necessary to comply with legal obligations
+- Explicitly permitted by you
+
+All employee access is logged and monitored to ensure compliance with our security policies.
 
 
 ### Tracking Technologies and Cookies
@@ -215,22 +252,6 @@ The Company may disclose Your Personal Data in the good faith belief that such a
 ## Security of Your Personal Data
 
 The security of Your Personal Data is important to Us, but remember that no method of transmission over the Internet, or method of electronic storage is 100% secure. While We strive to use commercially acceptable means to protect Your Personal Data, We cannot guarantee its absolute security.
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 # Children's Privacy
